Remove animation coins on safari. Fix pacman on scheme

--- a/src/scss/blocks/_donate.scss
+++ b/src/scss/blocks/_donate.scss
@@ -764,4 +764,6 @@
 
 }
 
-
+.safari .donate .coins .coin {
+  animation-name: unset;
+}
